@@ -87,7 +87,7 @@ delFromSubscene3d <- function(ids, subscene = subsceneInfo()$id) {
   result <- .C(rgl_delfromsubscene, success = as.integer(subscene), 
      n = as.integer(length(ids)), ids = as.integer(ids))$success
   if (!result)
-    stop("Failed to add objects to subscene ", subscene)
+    stop("Failed to delete objects from subscene ", subscene)
   invisible(subscene)
 }
 
